# image-filters

./: .gitignore  CMakeLists.txt  README.md
include/: IOperator.hpp  blur.hpp  cv_utils.hpp  filter_pipeline.hpp  image_filter.hpp  img_utils.hpp  io_utils.hpp  prof_utils.hpp  scharr.hpp  sobel.hpp  types.hpp
src/: blur.cpp  cv_utils.cpp  filter_pipeline.cpp  image_filter.cpp  io_utils.cpp  main.cpp  scharr.cpp  sobel.cpp  tempCodeRunnerFile.cpp
test/: test_blur.cpp  test_image_filter.cpp  test_scharr.cpp  test_sobel.cpp  test_utils.hpp
